# Software-Engineering-Sprint1

./: CMakeLists.txt  README.md
docs/: Doxyfile.in
src/: CMakeLists.txt  main.cpp
